--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: Build and Release GestionHotel-Core Application
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -16,7 +13,7 @@ jobs:
   build-linux:
     runs-on: ubuntu-latest
 
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
 
     strategy:
       matrix:
@@ -61,7 +58,7 @@ jobs:
   build-windows:
     runs-on: windows-latest
 
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
 
     strategy:
       matrix:
