--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,50 +10,50 @@ on:
 
 jobs:
 
-  build-linux:
-    runs-on: ubuntu-latest
+  # build-linux:
+  #   runs-on: ubuntu-latest
 
-    if: github.event.pull_request.merged == true
+  #   if: github.event.pull_request.merged == true
 
-    strategy:
-      matrix:
-        package_type: [deb, rpm]
+  #   strategy:
+  #     matrix:
+  #       package_type: [deb, rpm]
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v4
 
-    - name: Set up Java 21
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '21'
+  #   - name: Set up Java 21
+  #     uses: actions/setup-java@v4
+  #     with:
+  #       distribution: 'temurin'
+  #       java-version: '21'
 
-    - name: Build with Maven
-      working-directory: ./GestionHotel-Core
-      run: mvn clean package
+  #   - name: Build with Maven
+  #     working-directory: ./GestionHotel-Core
+  #     run: mvn clean package
 
-    - name: Get project version
-      id: get-version
-      working-directory: GestionHotel-Core
-      run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+  #   - name: Get project version
+  #     id: get-version
+  #     working-directory: GestionHotel-Core
+  #     run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
-    - name: Generate ${{ matrix.package_type }} installer
-      working-directory: ./GestionHotel-Core
-      run: |
-        jpackage --type ${{ matrix.package_type }} \
-        --input target/ \
-        --main-jar GestionHotel-Core-${{ env.VERSION }}.jar \
-        --main-class com.cocot3ro.gestionhotel.core.GestionHotelCoreApplication \
-        --name "GestionHotel_Core" \
-        --dest target/installer \
-        --app-version ${{ env.VERSION }}
+  #   - name: Generate ${{ matrix.package_type }} installer
+  #     working-directory: ./GestionHotel-Core
+  #     run: |
+  #       jpackage --type ${{ matrix.package_type }} \
+  #       --input target/ \
+  #       --main-jar GestionHotel-Core-${{ env.VERSION }}.jar \
+  #       --main-class com.cocot3ro.gestionhotel.core.GestionHotelCoreApplication \
+  #       --name "GestionHotel_Core" \
+  #       --dest target/installer \
+  #       --app-version ${{ env.VERSION }}
 
-    - name: Upload ${{ matrix.package_type }} installer
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.package_type }}-installer
-        path: GestionHotel-Core/target/installer/*.${{ matrix.package_type }}
+  #   - name: Upload ${{ matrix.package_type }} installer
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: ${{ matrix.package_type }}-installer
+  #       path: GestionHotel-Core/target/installer/*.${{ matrix.package_type }}
 
   build-windows:
     runs-on: windows-latest
@@ -103,7 +103,7 @@ jobs:
 
   release:
     needs: 
-      - build-linux
+      # - build-linux
       - build-windows
     runs-on: ubuntu-latest
 
