--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,6 +147,6 @@ jobs:
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github.everest-preview+json" \
-            -H "Authorization: token ${{ secretes.GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/cocot3ro/GestionHotel-Suite/dispatchers \
             -d '{"event_type":"update_submodule"}'
