--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,51 +10,6 @@ on:
 
 jobs:
 
-  # build-linux:
-  #   runs-on: ubuntu-latest
-
-  #   if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
-
-  #   strategy:
-  #     matrix:
-  #       package_type: [deb, rpm]
-
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v4
-
-  #   - name: Set up Java 21
-  #     uses: actions/setup-java@v4
-  #     with:
-  #       distribution: 'temurin'
-  #       java-version: '21'
-
-  #   - name: Build with Maven
-  #     working-directory: ./GestionHotel-Core
-  #     run: mvn clean package
-
-  #   - name: Get project version
-  #     id: get-version
-  #     working-directory: GestionHotel-Core
-  #     run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-
-  #   - name: Generate ${{ matrix.package_type }} installer
-  #     working-directory: ./GestionHotel-Core
-  #     run: |
-  #       jpackage --type ${{ matrix.package_type }} \
-  #       --input target/ \
-  #       --main-jar GestionHotel-Core-${{ env.VERSION }}.jar \
-  #       --main-class org.springframework.boot.loader.launch.JarLauncher \
-  #       --name "GestionHotel_Core" \
-  #       --dest target/installer \
-  #       --app-version ${{ env.VERSION }}
-
-  #   - name: Upload ${{ matrix.package_type }} installer
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: ${{ matrix.package_type }}-installer
-  #       path: GestionHotel-Core/target/installer/*.${{ matrix.package_type }}
-
   build-windows:
     runs-on: windows-latest
 
@@ -91,9 +46,15 @@ jobs:
           --input target/ `
           --main-jar GestionHotel-Core-${{ env.VERSION }}.jar `
           --main-class org.springframework.boot.loader.launch.JarLauncher `
-          --name "GestionHotel_Core" `
+          --name "GestionHotel Core" `
+          --win-menu-group "GestionHotel" `
+          --app-version-url "https://cocot3ro.github.io./GestionHotel-Suite" `
           --dest target/installer `
-          --app-version ${{ env.VERSION }}
+          --app-version ${{ env.VERSION }} `
+          --win-shortcut `
+          --win-menu `
+          --win-dir-chooser `
+          --win-per-user-isntall
 
       - name: Upload ${{ matrix.package_type }} installer
         uses: actions/upload-artifact@v4
@@ -103,8 +64,8 @@ jobs:
 
   release:
     needs:
-      # - build-linux
       - build-windows
+
     runs-on: ubuntu-latest
 
     steps:
@@ -135,8 +96,6 @@ jobs:
         files: |
           ./msi-installer/*.msi
           ./exe-installer/*.exe
-        # ./deb-installer/*.deb
-        # ./rpm-installer/*.rpm
 
   update-submodules:
     needs: release
