--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ jobs:
 
     if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
 
+    strategy:
+      matrix:
+        package_type: [msi, exe]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,10 +39,10 @@ jobs:
         run: |
           "VERSION=$(mvn help:evaluate '-Dexpression=project.version' -q -DforceStdout)" >> $env:GITHUB_ENV
 
-      - name: Generate MSI installer
+      - name: Generate ${{ matrix.package_type }} installer
         working-directory: ./GestionHotel-Core
         run: |
-          jpackage --type msi `
+          jpackage --type ${{ matrix.package_type }} `
           --input target/ `
           --main-jar GestionHotel-Core-${{ env.VERSION }}.jar `
           --main-class org.springframework.boot.loader.launch.JarLauncher `
@@ -54,11 +58,11 @@ jobs:
           --win-dir-chooser `
           --win-per-user-install
 
-      - name: Upload MSI installer
+      - name: Upload ${{ matrix.package_type }} installer
         uses: actions/upload-artifact@v4
         with:
-          name: msi-installer
-          path: GestionHotel-Core/target/installer/*.msi
+          name: ${{ matrix.package_type }}-installer
+          path: GestionHotel-Core/target/installer/*.${{ matrix.package_type }}
 
   release:
     needs:
