--- a/GestionHotel-Core/src/main/resources/application.yml
+++ b/GestionHotel-Core/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: GestionHotel-Core
   datasource:
-    url: jdbc:h2:file:~/almacenDB
+    url: jdbc:h2:file:./data/database/coreDatabase
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
